--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.0.10",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/joi": "^17.2.3",
@@ -60,7 +60,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "roots": ["src", "test"],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
