--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "root",
-  "password": "root",
-  "database": "test",
+  "username": "admin",
+  "password": "1234",
+  "database": "db",
   "entities": [
     "dist/**/*.entity{.ts,.js}"
   ],
