--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "mysql2": "^2.3.0",
     "passport": "^0.5.0",
