--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.0.6",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "csurf": "^1.11.0",
+    "graphql": "^15.6.1",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "mysql2": "^2.3.0",
